--- a/axies-example.tex
+++ b/axies-example.tex
@@ -9,6 +9,8 @@
 % configuration for geometry
 \geometry{top=20mm, bottom=24mm, left=23mm, right=23mm}
 
+\pagestyle{empty}
+
 \title{大学ICT推進協議会年次大会 予稿用テンプレート}
 \author[1)]{森 鴎外}
 \author[1),2)]{夏目 漱石}
