maketitle で英文情報, メールアドレスが表示されるように

--- a/axies-example.tex
+++ b/axies-example.tex
@@ -1,38 +1,84 @@
 \documentclass[a4paper,twocolumn,10pt]{jsarticle}
-\usepackage{authblk}
 \usepackage{geometry}
 
-% configuration for authblk package
-\renewcommand*{\Authsep}{, }
-\renewcommand*{\Authand}{, }
-\renewcommand*{\Authands}{, }
 % configuration for geometry
 \geometry{top=20mm, bottom=24mm, left=23mm, right=23mm}
+
+% jsarticle 定義部分の上書き
+\makeatletter
+  % maketitle
+  \def\@maketitle{%
+    \newpage
+    \begin{center}%
+       %日本語タイトル
+	    {\Large \textbf{\@title} \par}%
+       \vskip 9pt
+       %日本語著者
+       {\large \lineskip .0em
+        \begin{tabular}[t]{c}%
+          \@author
+        \end{tabular} \par}%
+       \vskip 9pt
+       %日本語所属
+       {\normalsize \lineskip .0em
+        \begin{tabular}[t]{c}%
+          \etitle@affiliation
+        \end{tabular} \par}%
+      % e-mail address
+       \vskip 0.3em
+       {\normalsize \lineskip .0em
+        \begin{tabular}[t]{c}%
+		{\tt \etitle@contactemail}
+        \end{tabular} \par}%
+      % english title
+      \vskip 1.5em
+       {\Large \textbf{\etitle@etitle} \par}%
+       \vskip 0.5em
+       {\large \lineskip .0em
+        \begin{tabular}[t]{c}%
+          \etitle@eauthor
+        \end{tabular} \par}%
+       \vskip 0.5em
+       {\normalsize\selectfont \lineskip .0em
+        \begin{tabular}[t]{c}%
+          \etitle@eaffiliation
+        \end{tabular} \par}%
+      \vskip 0.5em
+    \end{center}%
+    \par\vskip 1.5em
+    \ifvoid\@abstractbox\else\centerline{\box\@abstractbox}\vskip1.5em\fi
+    }
+  \newcommand{\etitle@affiliation}{}
+  \newcommand{\etitle@contactemail}{}
+  \newcommand{\etitle@etitle}{}
+  \newcommand{\etitle@eauthor}{}
+  \newcommand{\etitle@eaffiliation}{}
+  \newcommand{\affiliation}[1]{\renewcommand{\etitle@affiliation}{#1}}
+  \newcommand{\contactemail}[1]{\renewcommand{\etitle@contactemail}{#1}}
+  \newcommand{\etitle}[1]{\renewcommand{\etitle@etitle}{#1}}
+  \newcommand{\eauthor}[1]{\renewcommand{\etitle@eauthor}{#1}}
+  \newcommand{\eaffiliation}[1]{\renewcommand{\etitle@eaffiliation}{#1}}
+\makeatother
 
 \pagestyle{empty}
 
 \title{大学ICT推進協議会年次大会 予稿用テンプレート}
-\author[1)]{森 鴎外}
-\author[1),2)]{夏目 漱石}
-\author[2)]{芥川 龍之介}
-\affil[1)]{日本文学大学 情報センター}
-\affil[2)]{日本文学大学 大学院文学研究科}
-
-% english information
-%\etitle{}
-%\eauthor[1)]{森 鴎外}
-%\eauthor[1),2)]{夏目 漱石}
-%\eauthor[2)]{芥川 龍之介}
-%\eaffil[1)]{日本文学大学 情報センター}
-%\eaffil[2)]{日本文学大学 大学院文学研究科}
-
-\date{}
-
-\begin{document}
+\author{森 鴎外$^{1)}$, 夏目 漱石$^{1),2)}$, 芥川 龍之介$^{2)}$}
+\affiliation{
+1) 日本文学大学 情報センター \\
+2) 日本文学大学 大学院文学研究科}
+\contactemail{mori@nitibun-u.ac.jp}
+\etitle{Manuscript Template for AXIES Annual Meeting}
+\eauthor{Ogai Mori$^{1)}$, Soseki Natsume$^{1),2)}$, Ryunosuke Akutagawa$^{2)}$}
+\eaffiliation{
+1) Information Center, Nihon Bungaku Univ. \\
+2) Graduate School of Literature, Nihon Bungaku Univ.}
 
 \begin{abstract}
 大学ICT推進協議会年次大会の予稿用テンプレートです。大学ICT推進協議会年次大会の予稿用テンプレートです。大学ICT推進協議会年次大会の予稿用テンプレートです。大学ICT推進協議会年次大会の予稿用テンプレートです。	
 \end{abstract}
+
+\begin{document}
 
 \maketitle
 
