適宜コメントを追加

--- a/axiesproc-sample.tex
+++ b/axiesproc-sample.tex
@@ -1,6 +1,6 @@
 % axiesproc クラスを利用します.
 % このクラスは jsarticle に依存し, ひいては pLaTeX2e を要求します
-\documentclass{axiesproc}
+\documentclass{jsaxiesproc}
 
 % 必要に応じ, 適宜パッケージを追加してください.
 % usepackage{amsmath}
@@ -97,4 +97,4 @@
 \end{document}
 
 % for vim cofiguration
-% vim: set fileformat=unix fileencoding=utf8
+% vim: set fileformat=unix fileencoding=utf8 filetype=tex
