Add compatibility to uplatex
uplatexのオプションを渡せるようにした

--- a/axiesproc-sample.tex
+++ b/axiesproc-sample.tex
@@ -1,6 +1,6 @@
 % axiesproc クラスを利用します.
 % このクラスは jsarticle に依存し, ひいては pLaTeX2e を要求します
-\documentclass{jsaxiesproc}
+\documentclass[a4paper,twocolumn,10pt,uplatex]{jsaxiesproc}
 
 % 必要に応じ, 適宜パッケージを追加してください.
 % usepackage{amsmath}
